[package]
name = "pico-raptor"
version = "0.2.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-rp = { version = "0.2.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }

# embassy-usb = { version = "0.3.0", features = ["defmt"] }

embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0" }
embedded-hal-async = "1.0.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
embassy-futures = "0.1.1"
static_cell = "2.1.0"
portable-atomic = { version = "1.7.0", features = ["critical-section"] }

rp2040-boot2 = "0.3"

smart-leds = "0.4.0"

pio-proc = "0.2"
pio = "0.2.1"

fixed = "1.28.0"
fixed-macro = "1.2"

[patch.crates-io]
embassy-rp = {git="https://github.com/embassy-rs/embassy", rev = "1cfd537"}
embassy-executor = {git="https://github.com/embassy-rs/embassy", rev = "1cfd537"}
embassy-time = {git="https://github.com/embassy-rs/embassy", rev = "1cfd537"}